<resources>
    <string name="app_name">AssigmentHub</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>

    <string name="dont_have_account">Don’t have an account?</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="home">Home</string>
    <string name="search">Search..</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="add_student">Add Student</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="ended">Ended</string>
    <string name="ongoing">Ongoing</string>
    <string name="roll_no">Roll No.</string>
    <string name="select_year">Select Year</string>
    <string name="select_branch">Select Branch</string>
    <string name="submit">Submit</string>
    <string name="submission_date">Submission Date</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="subject">Subject</string>
    <string name="last_submission_date">Last Submission Date</string>
    <string name="description">Description</string>
    <string name="no_data">No Data</string>
    <string name="end_assignment">End Assignment</string>
    <string name="end">End</string>

    <string name="home_fragment">HomeFragment</string>
    <string name="profile_fragment">ProfileFragment</string>

    <string name="students_completed">Students Completed %s</string>
    <string name="students_uncompleted">Students Uncompleted %s</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="done">Done</string>
    <string name="please_wait">Please wait..</string>

</resources>